// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should have two different levels of headings 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c8 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c6 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c5,
[aria-selected="true"] .c6 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c11 {
  border-top: 1px solid #bbcadf;
}

.c9 {
  padding: 1.6rem;
  -webkit-animation: iHsNqv 250ms ease-in;
  animation: iHsNqv 250ms ease-in;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c4:hover,
.c4:focus,
.c4:focus-within,
.c4[aria-expanded="true"] {
  color: #3e486e;
}

.c7 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c10 > *:first-child {
  margin-top: 0;
}

.c10 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  margin-bottom: 3.2rem;
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h2
      class="c1"
    >
      <span
        class="c2"
      />
      titre 0
    </h2>
  </div>
  <p>
    paragraphe 0
  </p>
  <div
    class="c3"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class=""
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-raa-0"
            aria-disabled="false"
            aria-expanded="false"
            class="c4"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-raa-0"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="c5 c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c7"
            >
              <h2
                class="c8"
                data-testid="undefined-0"
                style="margin: 0px;"
              >
                titre 1
              </h2>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c9"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-raa-0"
        >
          <div
            class="c10"
          >
            <p>
              paragraphe 1-1
            </p>
            <p>
              paragraphe 1-2
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c11"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-raa-1"
            aria-disabled="false"
            aria-expanded="false"
            class="c4"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-raa-1"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="c5 c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c7"
            >
              <h2
                class="c8"
                data-testid="undefined-1"
                style="margin: 0px;"
              >
                titre 2
              </h2>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c9"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-raa-1"
        >
          <div
            class="c10"
          >
            <p>
              paragraphe 2-1
            </p>
            <p>
              paragraphe 2-2
            </p>
            <h3
              class="c8"
              data-testid="heading"
            >
              titre 2-1
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c11"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-raa-2"
            aria-disabled="false"
            aria-expanded="false"
            class="c4"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-raa-2"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="c5 c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c7"
            >
              <h2
                class="c8"
                data-testid="undefined-2"
                style="margin: 0px;"
              >
                titre 3
              </h2>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c9"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-raa-2"
        >
          <div
            class="c10"
          >
            <p>
              paragraphe 3-1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;

exports[`<Accordion /> should render all, siblings included 1`] = `
.c0 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c4 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c3,
[aria-selected="true"] .c4 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c8 {
  border-top: 1px solid #bbcadf;
}

.c6 {
  padding: 1.6rem;
  -webkit-animation: iHsNqv 250ms ease-in;
  animation: iHsNqv 250ms ease-in;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c2:hover,
.c2:focus,
.c2:focus-within,
.c2[aria-expanded="true"] {
  color: #3e486e;
}

.c5 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c7 > *:first-child {
  margin-top: 0;
}

.c7 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin-bottom: 3.2rem;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

<div>
  <h5
    class="c0"
    data-testid="heading"
  >
    titre 0
  </h5>
  <p>
    paragraphe 0
  </p>
  <div
    class="c1"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class=""
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-raa-3"
            aria-disabled="false"
            aria-expanded="false"
            class="c2"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-raa-3"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="c3 c4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c5"
            >
              <h5
                class="c0"
                data-testid="undefined-0"
                style="margin: 0px;"
              >
                titre 1
              </h5>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c6"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-raa-3"
        >
          <div
            class="c7"
          >
            <p>
              paragraphe 1-1
            </p>
            <p>
              paragraphe 1-2
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c8"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-raa-4"
            aria-disabled="false"
            aria-expanded="false"
            class="c2"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-raa-4"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="c3 c4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c5"
            >
              <h5
                class="c0"
                data-testid="undefined-1"
                style="margin: 0px;"
              >
                titre 2
              </h5>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c6"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-raa-4"
        >
          <div
            class="c7"
          >
            <p>
              paragraphe 2-1
            </p>
            <p>
              paragraphe 2-2
            </p>
            <h6
              class="c0"
              data-testid="heading"
            >
              titre 2-1
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c8"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-raa-5"
            aria-disabled="false"
            aria-expanded="false"
            class="c2"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-raa-5"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="c3 c4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c5"
            >
              <h5
                class="c0"
                data-testid="undefined-2"
                style="margin: 0px;"
              >
                titre 3
              </h5>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c6"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-raa-5"
        >
          <div
            class="c7"
          >
            <p>
              paragraphe 3-1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;
